--- a/www/public/index.html
+++ b/www/public/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Wasm Test</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      canvas[alt='bevy'] {
+        user-select: none;
+        outline: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
